--- a/index.html
+++ b/index.html
@@ -123,6 +123,55 @@
                 </div>
             </div>
         </section>
+        <section id="section-mini-galeria">
+            <div class="container mini-galeria-container">
+                <div class="text-mini-galeria">
+                    <h4>Tattoo Bônus</h4>
+                    <p>Maximum flexibility in production. Relief of employees by performing ergonomically unfavorable <br> work steps that could not previously be automated</p>
+                </div>
+                <div class="images-mini-galeria">
+                    <div class="galeria-img1">
+                        <img src="assets/img/mini-galeria-1.jpg" alt=""/>
+                    </div>
+                    <div class="galeria-img2">
+                        <img src="assets/img/mini-galeria-2.jpg" alt=""/>
+                    </div>
+                    <div class="galeria-img3">
+                        <img src="assets/img/mini-galeria-3.jpg" alt=""/>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="section-texto">
+            <div class="container texto-container">
+                <div class="icone-aspas">
+                    <img src="assets/img/icone-aspas.png" alt="Aspas" />
+                </div>
+                <div class="texto">
+                    <p><em>Determinação, coragem e autoconfiança são fatores decisivos para o sucesso. Se estamos possuídos por uma inabalável determinação, conseguiremos superá-los. Independentemente das circunstâncias, devemos ser sempre humildes, recatados e despidos de orgulho.</em></p>
+                    <p class="autor">- Dalai Lama -</p>
+                </div>    
+            </div>
+        </section>
+        <section id="section-tatto-geometrico">
+            <div class="container geometrico-container">
+                <div class="area-geometrico-conteudo">
+                    <div class="geometrico-left">
+                        <img src="assets/img/tatto-geometrico.jpg" alt="" />
+                    </div>
+                    <div class="geometrico-right">
+                        <div class="texto-right">
+                            <h4>Uma das tatuagens mais pedidas Desenho Geometrico!</h4>
+                            <p>The number of robots in the world today is approaching 1,000,000, with almost half that number in Japan and just 15% in the US. A couple of decades ago, 90% of robots were used in car manufacturing, typically on assembly
+                            lines doing a variety of repetitive tasks. Today only 50% are in automobile plants, with the other half spread out among other factories, and many other industries.</p>
+                        </div>
+                        <div class="button-right">
+                            <button>learn more</button>
+                        </div>
+                    </div>
+                </div>
+            </div>    
+        </section>
     </main>
     <script src="assets/js/script.js"></script>
 </body>
