--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" href="assets/img/favicon-new-age.ico"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="assets/fontawesome/css/all.css"/>
     <link href="https: //fonts.googleapis.com/css2? família= Poppins:wght@100;400;700 & display=swap" rel="stylesheet">
     <title>New Age Tattoo</title>
 </head>
@@ -39,6 +40,11 @@
         </div>
     </header>
     <main id="main">
+        <div id="botao-ancora">
+            <button onclick="botaoAncora()">
+                <img src="assets/img/icone-seta.png" alt="botao-ancora"/>
+            </button>
+        </div>
         <section id="banner-pcl">
              <div class="container banner-container">
                 <div class="title-banner">
@@ -131,13 +137,13 @@
                 </div>
                 <div class="images-mini-galeria">
                     <div class="galeria-img1">
-                        <img src="assets/img/mini-galeria-1.jpg" alt=""/>
+                        <img src="assets/img/mini-galeria-1.jpg" alt="Tatuagem"/>
                     </div>
                     <div class="galeria-img2">
-                        <img src="assets/img/mini-galeria-2.jpg" alt=""/>
+                        <img src="assets/img/mini-galeria-2.jpg" alt="Tatuagem"/>
                     </div>
                     <div class="galeria-img3">
-                        <img src="assets/img/mini-galeria-3.jpg" alt=""/>
+                        <img src="assets/img/mini-galeria-3.jpg" alt="Tatuagem"/>
                     </div>
                 </div>
             </div>
@@ -153,26 +159,68 @@
                 </div>    
             </div>
         </section>
-        <section id="section-tatto-geometrico">
-            <div class="container geometrico-container">
-                <div class="area-geometrico-conteudo">
-                    <div class="geometrico-left">
-                        <img src="assets/img/tatto-geometrico.jpg" alt="" />
-                    </div>
-                    <div class="geometrico-right">
-                        <div class="texto-right">
+        <section id="section-tribal">
+            <div class="container tribal-container">
+                <div class="area-tribal-conteudo">
+                    <div class="tribal-left">
+                        <div class="texto-left">
                             <h4>Uma das tatuagens mais pedidas Desenho Geometrico!</h4>
                             <p>The number of robots in the world today is approaching 1,000,000, with almost half that number in Japan and just 15% in the US. A couple of decades ago, 90% of robots were used in car manufacturing, typically on assembly
                             lines doing a variety of repetitive tasks. Today only 50% are in automobile plants, with the other half spread out among other factories, and many other industries.</p>
                         </div>
-                        <div class="button-right">
+                        <div class="button-left">
                             <button>learn more</button>
                         </div>
+                    </div>
+                    <div class="tribal-right">
+                        <img src="assets/img/tattoo-tribal.jpg" alt="Tatuagem Geometrica" />
                     </div>
                 </div>
             </div>    
         </section>
     </main>
+    <footer id="footer">
+        <div class="container footer-container">
+            <div class="social-footer">
+                <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="facebook"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="linkedin"><i class="fab fa-linkedin"></i></a>
+                <a href="#" class="youtube"><i class="fab fa-youtube"></i></a>
+            </div>
+            <div class="info-footer">
+                <div class="caixa1">
+                    <div class="logo-footer">
+                        <img src="assets/img/logo-new-age.png" alt="Logo New Age Tattoo">
+                    </div>
+                    <div class="text-footer">
+                        <p>Escrevendo lembranças ao <br> longo do tempo.</p>
+                        <a href="politica">política de privacidade</a>
+                    </div>
+                </div>
+                <div class="caixa2">
+                    <h4>Sobre</h4>
+                    <p>Transformando lembranças em realidades. Aqui nossos clientes encontram os melhores profissionais qualificados do Brasil. Na NEW AGE TATTOO é satisfação garantida.</p>
+                </div>
+                <div class="caixa3">
+                    <div class="caixa3-endereco">
+                        <h4>Endereço</h4>
+                        <h5>Cowmeia Coworking</h5>
+                        <h5>Edificio Easy</h5>
+                        <h5>Rua das Pitangueiras, It.5/6 Águas Claras, CEP: 71908-540</h5>
+                        <h5>Brasília - DF</h5>
+                    </div>
+                    <div class="caixa3-contato">
+                        <h5>+55 (61) 3585-3490</h5>
+                        <h5>contato@newagetattoo.com.br</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="direitos-footer">
+                <div class="linha"></div>
+                <p>© 2021 New Age Tattoo Ltda (NAG). Todos os direitos reservados.</p>
+            </div>
+        </div>  
+    </footer>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
