--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 </div>
                 <div id="menu-list">
                     <ul>
-                        <li class="button-activate"><a href="#">Cadastro</a></li>
-                        <li><a href="#">Download</a></li>
+                        <li class="button-activate"><a href="download.html">Download</a></li>
                         <li><a href="#">Galeria</a></li>
+                        <li><a href="login.html">Login</a></li>
                     </ul>
                 </div>
                 <div id="menu-toggle">
@@ -51,7 +51,7 @@
                     <h1>New Age <br>Tattoo</h1>
                 </div>
                 <div class="subtitle-banner">
-                    <h2>Lorem ipsum dolor sit amet, consectetur adipiscing <br> elit nullam nunc justo sagittis suscipit ultrices. </h2>
+                    <h2>Bem vindo ao nosso site, aqui você encontra os melhores <br> tatuadores do Distrito Federal e entorno, além de encontrar <br> os menores preços, venha e confira! </h2>
                 </div>
              </div>
         </section>
@@ -60,7 +60,7 @@
                 <div class="text-news">
                     <div class="title-news">
                         <spam>TATTOO NEWS</spam>
-                        <h3>Human-tattoo</h3>
+                        <h3>Melhores Tatuadores</h3>
                     </div>
                     <div class="description-news">
                         <p>In human-tattoo collaboration, the tattoo assists the human operator. This means: The machine does not replace the human, but complements his capabilities and relieves him of arduous tasks. These can include overhead work, for example, or the lifting of heavy loads. Autonomous, collaborative tattoos are also used to supply production workstations</p>
@@ -72,8 +72,8 @@
         <section id="section-future">
             <div class="container future-container">
                 <div class="future-description">
-                    <h4>FUTURE OF WORK</h4>
-                    <p><em>While much of the discourse around AI and automation has <br> been concerned with the looming threat to the workforce...</em></p>
+                    <h4>Tatuagens das mais diversas variedades!</h4>
+                    <p><em>Lorem Ipsum é simplesmente um texto fictício da indústria tipográfica e de impressão. Lorem Ipsum tem sido o texto fictício padrão da indústria desde os anos 1500, quando um impressor desconhecido pegou uma cozinha de tipos....</em></p>
                 </div>
                 <div class="future-galeria">
                     <div class="img-future">
@@ -114,17 +114,17 @@
             <div class="container info-container">
                 <div class="box">
                     <img src="assets/img/icon-caneta.png" alt="Icone" />
-                    <h4>Pen</h4>
+                    <h4>Maquina Tatuadora</h4>
                     <p>When the first industrial revolution hit ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
                 </div>
                 <div class="box">
                     <img src="assets/img/icon-corpo.png" alt="Icone" />
-                    <h4>Body</h4>
+                    <h4>Corpo</h4>
                     <p>When the first industrial revolution hit ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
                 </div>
                 <div class="box">
                     <img src="assets/img/icon-tinta.png" alt="Icone" />
-                    <h4>Ink</h4>
+                    <h4>Tinta Profissional</h4>
                     <p>When the first industrial revolution hit ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
                 </div>
             </div>
@@ -164,7 +164,7 @@
                 <div class="area-tribal-conteudo">
                     <div class="tribal-left">
                         <div class="texto-left">
-                            <h4>Uma das tatuagens mais pedidas Desenho Geometrico!</h4>
+                            <h4>Uma das tatuagens mais pedidas, Desenho Geometrico!</h4>
                             <p>The number of robots in the world today is approaching 1,000,000, with almost half that number in Japan and just 15% in the US. A couple of decades ago, 90% of robots were used in car manufacturing, typically on assembly
                             lines doing a variety of repetitive tasks. Today only 50% are in automobile plants, with the other half spread out among other factories, and many other industries.</p>
                         </div>
