--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div id="menu-list">
                     <ul>
                         <li class="button-activate"><a href="download.html">Download</a></li>
-                        <li><a href="#">Galeria</a></li>
+                        <li><a href="galeria.html">Galeria</a></li>
                         <li><a href="login.html">Login</a></li>
                     </ul>
                 </div>
@@ -194,7 +194,7 @@
                     </div>
                     <div class="text-footer">
                         <p>Escrevendo lembranças ao <br> longo do tempo.</p>
-                        <a href="politica">política de privacidade</a>
+                        <a href="privacidade.html">política de privacidade</a>
                     </div>
                 </div>
                 <div class="caixa2">
