--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                     </a>
                 </div>
                 <div id="menu-list">
-                    <ul>
+                    <ul id="menu">
                         <li class="button-activate"><a href="download.html">Download</a></li>
                         <li><a href="galeria.html">Galeria</a></li>
                         <li><a href="login.html">Login</a></li>
                     </ul>
                 </div>
-                <div id="menu-toggle">
+                <div id="menu-toggle" onclick="menuAcao()">
                     <div class="line1"></div>
                     <div class="line2"></div>
                     <div class="line3"></div>
@@ -190,8 +190,10 @@
             <div class="info-footer">
                 <div class="caixa1">
                     <div class="logo-footer">
-                        <img src="assets/img/logo-new-age.png" alt="Logo New Age Tattoo">
-                    </div>
+                        <a href="index.html">
+                            <img src="assets/img/logo-new-age.png" alt="Logo New Age Tattoo">
+                        </a>
+                        </div>
                     <div class="text-footer">
                         <p>Escrevendo lembranças ao <br> longo do tempo.</p>
                         <a href="privacidade.html">política de privacidade</a>
