--- a/galeria.html
+++ b/galeria.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="assets/fontawesome/css/all.css"/>
     <link href="https: //fonts.googleapis.com/css2? família= Poppins:wght@100;400;700 & display=swap" rel="stylesheet">
-    <title>Download do Aplicativo</title>
+    <title>Galeria</title>
 </head>
 <body>
     
