--- a/download.html
+++ b/download.html
@@ -11,10 +11,117 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="assets/fontawesome/css/all.css"/>
+    <link rel="stylesheet" href="assets/css/style.css"/>
+    <link rel="stylesheet" href="assets/css/download.css"/>
     <link href="https: //fonts.googleapis.com/css2? família= Poppins:wght@100;400;700 & display=swap" rel="stylesheet">
     <title>Download do Aplicativo</title>
 </head>
 <body>
-    
+    <header id="header">
+        <div class="container">
+            <nav id="nav">
+                <div class="logo">
+                    <a href="index.html">
+                        <img src="assets/img/logo-new-age.png" alt="New Age Tattoo"/>
+                    </a>
+                </div>
+                <div id="menu-list">
+                    <ul id="menu">
+                        <li class="button-activate"><a href="download.html">Download</a></li>
+                        <li><a href="galeria.html">Galeria</a></li>
+                        <li><a href="login.html">Login</a></li>
+                    </ul>
+                </div>
+                <div id="menu-toggle" onclick="menuAcao()">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <main id="main-download">
+        <div class="container main-area" >
+            <div class="main-left">
+                <div class="text-main">
+                    <h1>Fique por dentro das novidades, <br> baixe o nosso aplicativo!</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio <br> saepe natus dolorem, quam, aperiam dolores voluptatem possimus <br> accusantium quas error inventore unde expedita.</p>
+                </div>
+                <div class="buttons-main">
+                    <div class="android">
+                        <a href="https://play.google.com/store/apps">
+                            <i class="fab fa-apple"></i>
+                            DOWNLOAD
+                        </a>
+                        4.0
+                        <img src="assets/img/icone-estrela.png"/>
+                        <img src="assets/img/icone-estrela.png"/>
+                        <img src="assets/img/icone-estrela.png"/>
+                        <img src="assets/img/icone-estrela.png"/>
+                        <img src="assets/img/icone-estrela.png" class="estrela-cult"/>
+                    </div>
+                    <div class="ios">
+                        <a href="https://www.apple.com/br/store">
+                            <i class="fab fa-google-play"></i>
+                            DOWNLOAD
+                        </a>
+                        5.0
+                        <img src="assets/img/icone-estrela.png"/>
+                        <img src="assets/img/icone-estrela.png"/>
+                        <img src="assets/img/icone-estrela.png"/>
+                        <img src="assets/img/icone-estrela.png"/>
+                        <img src="assets/img/icone-estrela.png"/>
+                    </div>
+                </div>
+            </div>
+            <div class="main-right">
+            </div>
+        </div>
+    </main>
+    <footer id="footer">
+        <div class="container footer-container">
+            <div class="social-footer">
+                <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="facebook"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="linkedin"><i class="fab fa-linkedin"></i></a>
+                <a href="#" class="youtube"><i class="fab fa-youtube"></i></a>
+            </div>
+            <div class="info-footer">
+                <div class="caixa1">
+                    <div class="logo-footer">
+                        <a href="index.html">
+                            <img src="assets/img/logo-new-age.png" alt="Logo New Age Tattoo">
+                        </a>
+                        </div>
+                    <div class="text-footer">
+                        <p>Escrevendo lembranças ao <br> longo do tempo.</p>
+                        <a href="privacidade.html">política de privacidade</a>
+                    </div>
+                </div>
+                <div class="caixa2">
+                    <h4>Sobre</h4>
+                    <p>Transformando lembranças em realidades. Aqui nossos clientes encontram os melhores profissionais qualificados do Brasil. Na NEW AGE TATTOO é satisfação garantida.</p>
+                </div>
+                <div class="caixa3">
+                    <div class="caixa3-endereco">
+                        <h4>Endereço</h4>
+                        <h5>Cowmeia Coworking</h5>
+                        <h5>Edificio Easy</h5>
+                        <h5>Rua das Pitangueiras, It.5/6 Águas Claras, CEP: 71908-540</h5>
+                        <h5>Brasília - DF</h5>
+                    </div>
+                    <div class="caixa3-contato">
+                        <h5>+55 (61) 3585-3490</h5>
+                        <h5>contato@newagetattoo.com.br</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="direitos-footer">
+                <div class="linha"></div>
+                <p>© 2021 New Age Tattoo Ltda (NAG). Todos os direitos reservados.</p>
+            </div>
+        </div>  
+    </footer>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
