--- a/download.html
+++ b/download.html
@@ -41,11 +41,16 @@
         </div>
     </header>
     <main id="main-download">
+        <div id="botao-ancora">
+            <button onclick="botaoAncora()">
+                <img src="assets/img/icone-seta.png" alt="botao-ancora"/>
+            </button>
+        </div>
         <div class="container main-area" >
             <div class="main-left">
                 <div class="text-main">
                     <h1>Fique por dentro das novidades, <br> baixe o nosso aplicativo!</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio <br> saepe natus dolorem, quam, aperiam dolores voluptatem possimus <br> accusantium quas error inventore unde expedita.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio saepe natus dolorem, quam, aperiam dolores voluptatem possimus accusantium quas error inventore unde expedita.</p>
                 </div>
                 <div class="buttons-main">
                     <div class="android">
