--- a/login.html
+++ b/login.html
@@ -45,6 +45,79 @@
             <img src="assets/img/icone-seta.png" alt="botao-ancora"/>
         </button>
     </div>
+    <section id="login">
+        <div class="container login-container">
+            <div class="login-left">
+                <div class="line-login"></div>
+                <p>Venha fazer parte, faça seu login se já estiver cadastrado e fique por dentro de descontos e horários, caso não tenha um cadastro faça o seu agora!</p>
+            </div>
+            <div class="login-right">
+                <div class="line-login"></div>
+                <div class="text-login">
+                    <h2>Já tem cadastro?</h2>
+                    <h3>Faça seu login.</h3>
+                </div>
+                <div class="form-login">
+                    <form>
+                        <img src="assets/img/icone-email.png" alt="Icone Email" id="icone-email"/>
+                        <input type="email" id="emailUsuario" name="emailUsuario" placeholder="E-mail" required/>
+                        <img src="assets/img/icone-password.png" alt="Icone Senha" id="icone-senha"/>
+                        <input type="password" id="senhaUsuario" name="senhaUsuario" placeholder="Senha" required/>
+                        <button class="confirmar-login">ENTRAR</button>
+                    </form>
+                    <section id="cadastro-login">
+                        <a href="#" class="esq-button">Esqueci minha senha.</a>
+                        <a href="#" class="criar-button">Criar conta</a>
+                    </section>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer id="footer">
+        <div class="container footer-container">
+            <div class="social-footer">
+                <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="facebook"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="linkedin"><i class="fab fa-linkedin"></i></a>
+                <a href="#" class="youtube"><i class="fab fa-youtube"></i></a>
+            </div>
+            <div class="info-footer">
+                <div class="caixa1">
+                    <div class="logo-footer">
+                        <a href="index.html">
+                            <img src="assets/img/logo-new-age.png" alt="Logo New Age Tattoo">
+                        </a>
+                        </div>
+                    <div class="text-footer">
+                        <p>Escrevendo lembranças ao <br> longo do tempo.</p>
+                        <a href="privacidade.html">política de privacidade</a>
+                    </div>
+                </div>
+                <div class="caixa2">
+                    <h4>Sobre</h4>
+                    <p>Transformando lembranças em realidades. Aqui nossos clientes encontram os melhores profissionais qualificados do Brasil. Na NEW AGE TATTOO é satisfação garantida.</p>
+                </div>
+                <div class="caixa3">
+                    <div class="caixa3-endereco">
+                        <h4>Endereço</h4>
+                        <h5>Cowmeia Coworking</h5>
+                        <h5>Edificio Easy</h5>
+                        <h5>Rua das Pitangueiras, It.5/6 Águas Claras, CEP: 71908-540</h5>
+                        <h5>Brasília - DF</h5>
+                    </div>
+                    <div class="caixa3-contato">
+                        <h5>+55 (61) 3585-3490</h5>
+                        <h5>contato@newagetattoo.com.br</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="direitos-footer">
+                <div class="linha"></div>
+                <p>© 2021 New Age Tattoo Ltda (NAG). Todos os direitos reservados.</p>
+            </div>
+        </div>  
+    </footer>
+    <script src="assets/js/script.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
