--- a/galeria.html
+++ b/galeria.html
@@ -11,10 +11,33 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="assets/fontawesome/css/all.css"/>
+    <link rel="stylesheet" href="assets/css/style.css"/>
     <link href="https: //fonts.googleapis.com/css2? família= Poppins:wght@100;400;700 & display=swap" rel="stylesheet">
     <title>Galeria</title>
 </head>
 <body>
-    
+    <header id="header">
+        <div class="container">
+            <nav id="nav">
+                <div class="logo">
+                    <a href="index.html">
+                        <img src="assets/img/logo-new-age.png" alt="New Age Tattoo"/>
+                    </a>
+                </div>
+                <div id="menu-list">
+                    <ul id="menu">
+                        <li><a href="download.html">Download</a></li>
+                        <li><a href="galeria.html">Galeria</a></li>
+                        <li class="button-activate"><a href="login.html">Login</a></li>
+                    </ul>
+                </div>
+                <div id="menu-toggle" onclick="menuAcao()">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
