--- a/download.html
+++ b/download.html
@@ -111,8 +111,8 @@
                     <div class="caixa3-endereco">
                         <h4>Endereço</h4>
                         <h5>Cowmeia Coworking</h5>
-                        <h5>Edificio Easy</h5>
-                        <h5>Rua das Pitangueiras, It.5/6 Águas Claras, CEP: 71908-540</h5>
+                        <h5>Edificio Hard</h5>
+                        <h5>Rua das Pontes, It.7/3 Águas Claras, CEP: 73008-529</h5>
                         <h5>Brasília - DF</h5>
                     </div>
                     <div class="caixa3-contato">
