--- a/download.html
+++ b/download.html
@@ -95,7 +95,7 @@
                 <div class="caixa1">
                     <div class="logo-footer">
                         <a href="index.html">
-                            <img src="assets/img/logo-new-age.png" alt="Logo New Age Tattoo">
+                            <img src="assets/img/logo-new-age-footer.png" alt="Logo New Age Tattoo">
                         </a>
                         </div>
                     <div class="text-footer">
