--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
             <div class="container news-container">
                 <div class="text-news">
                     <div class="title-news">
-                        <spam>TATTOO NEWS</spam>
+                        <spam>New Age Tattoo</spam>
                         <h3>Melhores Tatuadores</h3>
                     </div>
                     <div class="description-news">
-                        <p>In human-tattoo collaboration, the tattoo assists the human operator. This means: The machine does not replace the human, but complements his capabilities and relieves him of arduous tasks. These can include overhead work, for example, or the lifting of heavy loads. Autonomous, collaborative tattoos are also used to supply production workstations</p>
+                        <p>O estúdio foi fundado em dezembro de 2021. Desde então somos referência em segurança (biossegurança), conforto e atendimento. Seguimos rigidamente as normas da vigilância sanitária e da Lei distrital que regulamenta os estúdios de tatuagem no Distrito Federal (Lei no. 4.398 de agosto de 2009).</p>
                     </div>
                 </div>
                 <div class="img-news"></div>
@@ -100,10 +100,17 @@
         <section id="section-blog">
             <div class="container blog-container">
                 <div class="blog-news">
-                    <div class="area1">The Tattoo of CES 2021. Don't Look Back in Ager!</div>
+                    <div class="area1">Don't Look Back in Ager!</div>
                     <div class="area2"></div>
                     <div class="area3"></div>
-                    <div class="area4">Hitting the show floor at CES can be something of a challenge. There are so many choices, it’s almost impossible to figure out where to even start. So this year, I got to narrow my focus to just one area — robotics — and it made my job a lot easier. Or it should have. Turns out, there are so many choices in the field of robotics, I was back where I started.</div>
+                    <div class="area4">O segredo para assegurar uma boa tatuagem é planejar o trabalho. Por mais que você saiba sobre tatuagem e sobre os seus
+                        processos, o planejamento é a melhor forma de garantir que você vai ficar satisfeito com a sua tattoo.
+                        A decisão de tatuar é permanente, então não seja impulsivo. Aprenda a curtir esse planejamento e assim os riscos de
+                        arrependimentos serão remotos.
+                        É necessário pensar bastante sobre o que você quer ter desenhado no seu corpo. Aqui vai uma questão para você pensar a
+                        respeito:
+                        O que você vai tatuar no seu corpo terá sempre o mesmo significado pra você ?
+                    </div>
                 </div>
                 <div class="blog-button">
                     <button>learn more</button>
@@ -133,7 +140,7 @@
             <div class="container mini-galeria-container">
                 <div class="text-mini-galeria">
                     <h4>Tattoo Bônus</h4>
-                    <p>Maximum flexibility in production. Relief of employees by performing ergonomically unfavorable <br> work steps that could not previously be automated</p>
+                    <p>Em nosso estudio além de garantimos a excelencia em nossos serviços, oferecemos <br> bônus de tatuagens e outras vantagens</p>
                 </div>
                 <div class="images-mini-galeria">
                     <div class="galeria-img1">
@@ -163,13 +170,12 @@
             <div class="container tribal-container">
                 <div class="area-tribal-conteudo">
                     <div class="tribal-left">
-                        <img src="assets/img/tattoo-tribal.jpg" alt="Tatuagem Geometrica" />
+                        <img src="assets/img/tattoo-tribal.jpg" alt="Tatuagem Tribal" />
                     </div>
                     <div class="tribal-right">
                         <div class="texto-left">
-                            <h4>Uma das tatuagens mais pedidas, Desenho Geometrico!</h4>
-                            <p>The number of robots in the world today is approaching 1,000,000, with almost half that number in Japan and just 15% in the US. A couple of decades ago, 90% of robots were used in car manufacturing, typically on assembly
-                            lines doing a variety of repetitive tasks. Today only 50% are in automobile plants, with the other half spread out among other factories, and many other industries.</p>
+                            <h4>De uma breve olhada em nossas artes. Confira mais na aba de galeria!</h4>
+                            <p>Em nossa aba de Galeria você encontra diversas referências dos mais variados tipos de tatuagens, além disso incentivamos nossos clientes a ter os melhores pensamentos para que a tatuagem sai como o esperado para a melhos experiência do cliente em nosso estudio. <br> Para acessar a gelria clique no botão abaixo ou no menu principal da página!</p>
                         </div>
                         <div class="button-left">
                             <button>learn more</button>
@@ -191,7 +197,7 @@
                 <div class="caixa1">
                     <div class="logo-footer">
                         <a href="index.html">
-                            <img src="assets/img/logo-new-age.png" alt="Logo New Age Tattoo">
+                            <img src="assets/img/logo-new-age-footer.png" alt="Logo New Age Tattoo">
                         </a>
                         </div>
                     <div class="text-footer">
