--- a/privacidade.html
+++ b/privacidade.html
@@ -162,7 +162,7 @@
             <div class="info-footer">
                 <div class="caixa1">
                     <div class="logo-footer">
-                        <img src="assets/img/logo-new-age.png" alt="Logo New Age Tattoo">
+                        <img src="assets/img/logo-new-age-footer.png" alt="Logo New Age Tattoo">
                     </div>
                     <div class="text-footer">
                         <p>Escrevendo lembranças ao <br> longo do tempo.</p>
