--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     </div>
                 </div>
                 <div class="blog-button">
-                    <button>learn more</button>
+                    <button>Ver mais</button>
                 </div>
             </div>
         </section>
@@ -155,8 +155,8 @@
                 </div>
             </div>
         </section>
-        <section id="section-texto">
-            <div class="container texto-container">
+        <section id="section-frase">
+            <div class="container frase-container">
                 <div class="icone-aspas">
                     <img src="assets/img/icone-aspas.png" alt="Aspas" />
                 </div>
@@ -173,12 +173,12 @@
                         <img src="assets/img/tattoo-tribal.jpg" alt="Tatuagem Tribal" />
                     </div>
                     <div class="tribal-right">
-                        <div class="texto-left">
+                        <div class="texto-right">
                             <h4>De uma breve olhada em nossas artes. Confira mais na aba de galeria!</h4>
                             <p>Em nossa aba de Galeria você encontra diversas referências dos mais variados tipos de tatuagens, além disso incentivamos nossos clientes a ter os melhores pensamentos para que a tatuagem sai como o esperado para a melhos experiência do cliente em nosso estudio. <br> Para acessar a gelria clique no botão abaixo ou no menu principal da página!</p>
                         </div>
                         <div class="button-left">
-                            <button>learn more</button>
+                            <button>Ver Mais</button>
                         </div>
                     </div>
                 </div>
