--- a/index.html
+++ b/index.html
@@ -41,32 +41,44 @@
     </header>
     <main id="main">
         <div id="botao-ancora">
-            <button onclick="botaoAncora()">
+            <button id="buttonAncora">
                 <img src="assets/img/icone-seta.png" alt="botao-ancora"/>
             </button>
         </div>
         <section id="banner-pcl">
-             <div class="container banner-container">
-                <div class="title-banner">
-                    <h1>New Age <br>Tattoo</h1>
+            <div class="filter-banner">
+                <div class="container banner-container">
+                    <div class="title-banner">
+                        <h1>New Age <span>Tattoo</span></h1>
+                    </div>
+                    <div class="subtitle-banner">
+                        <h2>Bem vindo ao nosso site!</h2>
+                    </div>
                 </div>
-                <div class="subtitle-banner">
-                    <h2>Bem vindo ao nosso site, aqui você encontra os melhores <br> tatuadores do Distrito Federal e entorno, além de encontrar <br> os menores preços, venha e confira! </h2>
-                </div>
-             </div>
+            </div>
         </section>
         <section id="section-news">
             <div class="container news-container">
-                <div class="text-news">
-                    <div class="title-news">
-                        <spam>New Age Tattoo</spam>
-                        <h3>Melhores Tatuadores</h3>
+                <div class="area-news">
+                    <div class="news-left">
+                        <div class="title-news">
+                            <spam>New Age Tattoo</spam>
+                            <h3>Melhores Tatuadores</h3>
+                        </div>
+                        <div class="description-news">
+                            <p>O estúdio foi fundado em dezembro de 2021. Desde então somos referência em segurança (biossegurança),
+                                conforto e atendimento. Seguimos rigidamente as normas da vigilância sanitária e da Lei distrital
+                                que regulamenta os estúdios de tatuagem no Distrito Federal (Lei no. 4.398 de agosto de 2009).
+                            </p>
+                        </div>
+                        <div class="button-news-left">
+                            <button>Ver Mais</button>
+                        </div>
                     </div>
-                    <div class="description-news">
-                        <p>O estúdio foi fundado em dezembro de 2021. Desde então somos referência em segurança (biossegurança), conforto e atendimento. Seguimos rigidamente as normas da vigilância sanitária e da Lei distrital que regulamenta os estúdios de tatuagem no Distrito Federal (Lei no. 4.398 de agosto de 2009).</p>
+                    <div class="news-right">
+                        <img src="assets/img/img-news.jpg" alt="Tatuagem Tribal" />
                     </div>
                 </div>
-                <div class="img-news"></div>
             </div>
         </section>
         <section id="section-future">
@@ -177,7 +189,7 @@
                             <h4>De uma breve olhada em nossas artes. Confira mais na aba de galeria!</h4>
                             <p>Em nossa aba de Galeria você encontra diversas referências dos mais variados tipos de tatuagens, além disso incentivamos nossos clientes a ter os melhores pensamentos para que a tatuagem sai como o esperado para a melhos experiência do cliente em nosso estudio. <br> Para acessar a gelria clique no botão abaixo ou no menu principal da página!</p>
                         </div>
-                        <div class="button-left">
+                        <div class="button-right">
                             <button>Ver Mais</button>
                         </div>
                     </div>
