--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li><a href="login.html">Login</a></li>
                     </ul>
                 </div>
-                <div id="menu-toggle" onclick="menuAcao()">
+                <div id="menu-toggle">
                     <div class="line1"></div>
                     <div class="line2"></div>
                     <div class="line3"></div>
@@ -58,7 +58,7 @@
             </div>
         </section>
         <section id="section-news">
-            <div class="container news-container">
+            <div class="container">
                 <div class="area-news">
                     <div class="news-left">
                         <div class="title-news">
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                     <div class="news-right">
-                        <img src="assets/img/img-news.jpg" alt="Tatuagem Tribal" />
+                        <img src="assets/img/img-news.jpg" alt="Tatuagem"/>
                     </div>
                 </div>
             </div>
