--- a/privacidade.html
+++ b/privacidade.html
@@ -199,7 +199,7 @@
             <img src="assets/img/icone-seta.png" alt="botao-ancora" />
         </button>
     </div>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/scriptAll.js"></script>
 </body>
 
 </html>
