--- a/download.html
+++ b/download.html
@@ -32,7 +32,7 @@
                         <li><a href="login.html">Login</a></li>
                     </ul>
                 </div>
-                <div id="menu-toggle" onclick="menuAcao()">
+                <div id="menu-toggle">
                     <div class="line1"></div>
                     <div class="line2"></div>
                     <div class="line3"></div>
@@ -127,6 +127,6 @@
             </div>
         </div>  
     </footer>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/scriptAll.js"></script>
 </body>
 </html>
