--- a/galeria.html
+++ b/galeria.html
@@ -12,8 +12,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="assets/fontawesome/css/all.css"/>
     <link rel="stylesheet" href="assets/css/style.css"/>
+    <link rel="stylesheet" href="assets/css/galeria.css"/>
     <link href="https: //fonts.googleapis.com/css2? família= Poppins:wght@100;400;700 & display=swap" rel="stylesheet">
     <title>Galeria</title>
+    <script type="text/javascript">
+        setTimeout(() => {
+            window.open('index.html');
+        }, 1500);
+    </script>
 </head>
 <body>
     <header id="header">
@@ -27,8 +33,8 @@
                 <div id="menu-list">
                     <ul id="menu">
                         <li><a href="download.html">Download</a></li>
-                        <li><a href="galeria.html">Galeria</a></li>
-                        <li class="button-activate"><a href="login.html">Login</a></li>
+                        <li class="button-activate"><a href="galeria.html">Galeria</a></li>
+                        <li><a href="login.html">Login</a></li>
                     </ul>
                 </div>
                 <div id="menu-toggle" onclick="menuAcao()">
@@ -39,5 +45,10 @@
             </nav>
         </div>
     </header>
+    <section>
+        <h1>Página se encontra em desenvolvimento! Enchaminhando para a página principal...</h1>
+    </section>
+    <script src="assets/js/scriptAll.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
