--- a/login.html
+++ b/login.html
@@ -117,7 +117,6 @@
             </div>
         </div>  
     </footer>
-    <script src="assets/js/script.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/scriptAll.js"></script>
 </body>
 </html>
