--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
                             <button>Ver Mais</button>
                         </div>
                     </div>
-                    <div class="news-right">
-                        <img src="assets/img/img-news.jpg" alt="Tatuagem"/>
-                    </div>
+                    <div class="news-right"></div>
                 </div>
             </div>
         </section>
