--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="assets/fontawesome/css/all.css"/>
     <link href="https: //fonts.googleapis.com/css2? família= Poppins:wght@100;400;700 & display=swap" rel="stylesheet">
-    <title>New Age Tattoo</title>
+    <title>New Age Tattoo - Estúdio de Tatuagem</title>
 </head>
 <body>
     <header id="header">
